--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "league/iso3166": "^4.2",
-        "nesbot/carbon": "^2.66"
+        "nesbot/carbon": "^2.66",
+        "ext-curl": "^7.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
